# cpp-boilerplate

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CPPLINT.cfg  LICENSE  Makefile  README.md  conanfile.txt
apps/: CMakeLists.txt
apps/demo-cli/: CMakeLists.txt  main.cpp
cmake/: Makefile  VERSIONS
include/demo/: lib.h
src/: CMakeLists.txt  lib.cpp
tests/: CMakeLists.txt  test_lib.cpp
